fix(swag): list_all_questions comment
