# api/v1/api.go
@@ -279,7 +279,7 @@ func CreateAQuestion(c *gin.Context) {
 // @description 列出全部问题
 // @Tags 防控知识板块
 // @Success 200 {string} string "{"success": true, "message": "查看成功", "data": "全部问题"}"
-// @Router /notice/list_all_comments [POST]
+// @Router /notice/list_all_questions [GET]
 func ListAllQuestions(c *gin.Context) {
 	questionList := service.QueryAllQuestions()
 	c.JSON(http.StatusOK, gin.H{"success": true, "message": "查询成功", "data": questionList})
