# docs/swagger.json
@@ -259,8 +259,10 @@
                         }
                     }
                 }
-            },
-            "post": {
+            }
+        },
+        "/notice/list_all_questions": {
+            "get": {
                 "description": "列出全部问题",
                 "tags": [
                     "防控知识板块"
